--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-email-validator==1.3.0
-flask==1.0.3
-flask-login==0.4.1
-flask-sqlalchemy==2.4.0
-flask-wtf==0.14.2
-itsdangerous==1.1.0
-jinja2==2.10.1
-ldap3==2.9.1
-markupsafe==1.1.1
-requests==2.28.1
-sqlalchemy==1.3.4
-werkzeug-0.16.1
-wtforms==3.0.1
+email-validator
+flask-login
+flask-sqlalchemy
+flask-wtf
+ldap3
+requests
